[package]
name = "stocks"
version = "0.1.0"
authors = ["Zach Peters <zpeters@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = {version = "1.1.5", features=["blocking"]}
clap = "2.33.3 "