[package]
name = "stocks"
version = "0.1.0"
authors = ["Zach Peters <zpeters@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "1.0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.1"
async-std = { version = "1.7", features = ["unstable", "attributes"]}
xactor = "0.7"
async-trait = "0.1"